# python_web_HW_3

./: README.md  clean.py  logger_.py  pyproject.toml  python_web_HW_3.lnk  task_2.py
